<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">&quot;ePlants&quot;</string>
    <string name="ic_action_buscar">&quot;Search&quot;</string>
    <string name="ic_action_buscar_form_buscar">&quot;Search&quot;</string>
    <string name="ic_action_buscar_form_main">&quot;Search&quot;</string>
    <string name="ic_action_cancelar_form_buscar">&quot;Cancel&quot;</string>
    <string name="ic_action_cancelar_form_editar">&quot;Cancel&quot;</string>
    <string name="ic_action_excluir_form_editar">&quot;Delete&quot;</string>
    <string name="ic_action_sobre_form_main">&quot;About&quot;</string>
    <string name="ic_action_foto_form_editar">&quot;Image&quot;</string>
    <string name="ic_action_listar_form_main">&quot;List&quot;</string>
    <string name="ic_action_mais_form_lista">&quot;More&quot;</string>
    <string name="ic_action_salvar_form_editar">&quot;Edit&quot;</string>
    <string name="ic_action_salvar_form_main">&quot;Save&quot;</string>
    <string name="ic_splash_form_splash">&quot;Splash image&quot;</string>
    <string name="imput_text_coletor_form_buscar">&quot;Collector(s)&quot;</string>
    <string name="imput_text_coletor_form_editar">&quot;Collector&quot;</string>
    <string name="imput_text_data_coleta_form_buscar">&quot;Date of collection&quot;</string>
    <string name="imput_text_data_coleta_form_editar">&quot;Date of collection&quot;</string>
    <string name="imput_text_determinador_form_buscar">&quot;Determiner&quot;</string>
    <string name="imput_text_determinador_form_editar">&quot;Determiner&quot;</string>
    <string name="imput_text_familia_form_buscar">&quot;Family&quot;</string>
    <string name="imput_text_familia_form_editar">&quot;Family&quot;</string>
    <string name="imput_text_formacao_vegetal_form_buscar">&quot;Plant formation&quot;</string>
    <string name="imput_text_formacao_vegetal_form_editar">&quot;Plant formation&quot;</string>
    <string name="imput_text_local_coleta_form_editar">&quot;Collection site&quot;</string>
    <string name="imput_text_nome_cientifico_form_buscar">&quot;Scientific name&quot;</string>
    <string name="imput_text_nome_cientifico_form_editar">&quot;Scientific name&quot;</string>
    <string name="imput_text_nome_cientifico_form_lista">&quot;Scientific name&quot;</string>
    <string name="imput_text_nome_form_buscar">&quot;Name&quot;</string>
    <string name="imput_text_nome_form_editar">&quot;Name&quot;</string>
    <string name="imput_text_nome_form_lista">&quot;Name&quot;</string>
    <string name="imput_text_observacao_form_buscar">&quot;Observation&quot;</string>
    <string name="imput_text_observacao_form_editar">&quot;Observation&quot;</string>
    <string name="imput_text_utilizacao_form_buscar">&quot;Use&quot;</string>
    <string name="imput_text_utilizacao_form_editar">&quot;Use&quot;</string>
    <string name="progressBar_form_splash">&quot;ProgressBar&quot;</string>
    <string name="text_cabecalho_form_buscar">&quot;Search Plant&quot;</string>
    <string name="text_cabecalho_form_editar">&quot;Plant Information&quot;</string>
    <string name="text_coletor_form_buscar">&quot;Collector(s):&quot;</string>
    <string name="text_coletor_form_editar">&quot;Collector(s):&quot;</string>
    <string name="text_data_coleta_form_buscar">&quot;Date of collection:&quot;</string>
    <string name="text_data_coleta_form_editar">&quot;Date of collection:&quot;</string>
    <string name="text_determinador_form_buscar">&quot;Determiner:&quot;</string>
    <string name="text_determinador_form_editar">&quot;Determiner:&quot;</string>
    <string name="text_familia_form_buscar">&quot;Family:&quot;</string>
    <string name="text_familia_form_editar">&quot;Family:&quot;</string>
    <string name="text_formacao_vegetal_form_buscar">&quot;Plant formation:&quot;</string>
    <string name="text_formacao_vegetal_form_editar">&quot;Plant formation:&quot;</string>
    <string name="text_local_coleta_form_editar">&quot;Collection site:&quot;</string>
    <string name="text_nome_cientifico_form_buscar">&quot;Scientific name:&quot;</string>
    <string name="text_nome_cientifico_form_editar">&quot;Scientific name:&quot;</string>
    <string name="text_nome_cientifico_form_lista">&quot;Scientific name:&quot;</string>
    <string name="text_nome_form_buscar">&quot;Name:&quot;</string>
    <string name="text_nome_form_editar">&quot;Name:&quot;</string>
    <string name="text_nome_form_lista">&quot;Name:&quot;</string>
    <string name="text_observacao_form_buscar">&quot;Observation:&quot;</string>
    <string name="text_observacao_form_editar">&quot;Observation:&quot;</string>
    <string name="text_utilizacao_form_buscar">&quot;Use:&quot;</string>
    <string name="text_utilizacao_form_editar">&quot;Use:&quot;</string>
    <string name="text_local_coleta_form_buscar">&quot;Collection site:&quot;</string>
    <string name="imput_text_local_coleta_form_buscar">&quot;Collection site&quot;</string>
    <string name="ic_action_menu_export">&quot;Export content&quot;</string>
    <string name="ic_action_menu_foto">&quot;Google image&quot;</string>
    <string name="ic_action_menu_novo">&quot;Insert new&quot;</string>
    <string name="ic_action_menu_buscar">&quot;Search&quot;</string>
    <string name="msg_erro">&quot;Error!&quot;</string>
    <string name="msg01_form_buscar">&quot;Please! enter the name of a plant for the search.&quot;</string>
    <string name="msg03_form_buscar">&quot;Oops!\nNo exemplary found&quot;</string>
    <string name="msg01_form_editar">&quot;You is not connected to internet. Please try again later!&quot;</string>
    <string name="msg02_form_editar">&quot;Please try again later.&quot;</string>
    <string name="msg03_form_editar">&quot;Exemplary deleted successfully!&quot;</string>
    <string name="msg04_form_editar">&quot;Required inform the common name plant for export!&quot;</string>
    <string name="msg05_form_editar">&quot;Choose formed the export&quot;</string>
    <string name="msg06_form_editar">&quot;Please! enter the name of the plant before recording.&quot;</string>
    <string name="msg07_form_editar">&quot;Plant successfully saved!&quot;</string>
    <string name="msg08_form_editar">&quot;Some information important referent the plant were not informed!&quot;</string>
    <string name="msg09_form_editar">&quot;File successfully generated in: ePlants!&quot;</string>
    <string name="msg10_form_editar">&quot;Some information are missing from the file generation!&quot;</string>
    <string name="msg11_form_editar">&quot;Please! enter the name of a plant to view the image.&quot;</string>
    <string name="text_cabecalho_form_sobre">&quot;About APP&quot;</string>
    <string name="text_versao_form_sobre">&quot;Version: 1.1&quot;</string>
    <string name="text_data_form_sobre">&quot;Creation date: September 2014&quot;</string>
    <string name="text_nome_form_sobre">&quot;Name App: ePlants&quot;</string>
    <string name="text_dev_form_sobre">&quot;Design and development&quot;</string>
    <string name="text_nome_dev_form_sobre">&quot;Vanderson Zanoni Campanholi&quot;</string>
    <string name="text_email_dev_form_sobre">&quot;vando.zc@gmail.com&quot;</string>
    <string name="text_sobre_form_sobre">&quot;About&quot;</string>
    <string name="text01_form_sobre">&quot;        Developed in academic way with the objective application of cataloging plants and species in a simple way , with the possibility of further use of the information in catalogs and physical binders.&quot;</string>
    <string name="text02_form_sobre">&quot;        The ePlants project contributes to students of biology and environmental courses for area have access to cataloging records and images through Google Copyright © 2014.&quot;</string>
    <string name="text_agradece_form_sobre">&quot;Thanks&quot;</string>
    <string name="text_agradece01_form_sobre">&quot;Teacher and MS. Luciano Antunes.&quot;</string>
    <string name="text_agradece02_form_sobre">&quot;Teacher and Dr. Rafael Martins.&quot;</string>
    <string name="text_sugestao_form_sobre">&quot;Suggestions and questions&quot;</string>
    <string name="text_sugestao01_form_sobre">&quot;The app will gain new features soon. If you have any suggestions or questions this app, please send an email to:&quot;</string>
    <string name="title_activity_teste_busca">TesteBusca</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

</resources>