<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.taprecisando.ePlantsView.EditarPlanta" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="642dp" >

            <TextView
                android:id="@+id/text_cabecalho_form_editar"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:background="@color/verde"
                android:contentDescription="@string/text_cabecalho_form_editar"
                android:gravity="center"
                android:text="@string/text_cabecalho_form_editar"
                android:textColor="@color/branco"
                android:textSize="@dimen/text_cabecalho" />

            <TextView
                android:id="@+id/text_nome_form_editar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/text_cabecalho_form_editar"
                android:contentDescription="@string/text_nome_form_editar"
                android:text="@string/text_nome_form_editar"
                android:textColor="@color/cinza" />

            <EditText
                android:id="@+id/imput_text_nome_form_editar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/text_nome_form_editar"
                android:layout_toLeftOf="@+id/ic_action_foto_form_editar"
                android:contentDescription="@string/imput_text_nome_form_editar"
                android:ems="10"
                android:gravity="center_vertical"
                android:inputType="textCapSentences">

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/text_nome_cientifico_form_editar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/imput_text_nome_form_editar"
                android:contentDescription="@string/text_nome_cientifico_form_editar"
                android:text="@string/text_nome_cientifico_form_editar"
                android:textColor="@color/cinza" />

            <EditText
                android:id="@+id/imput_text_nome_cientifico_form_editar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/text_nome_cientifico_form_editar"
                android:contentDescription="@string/imput_text_nome_cientifico_form_editar"
                android:ems="10"
                android:inputType="textCapSentences" />

            <TextView
                android:id="@+id/text_familia_form_editar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/imput_text_nome_cientifico_form_editar"
                android:contentDescription="@string/text_familia_form_editar"
                android:text="@string/text_familia_form_editar"
                android:textColor="@color/cinza" />

            <EditText
                android:id="@+id/imput_text_familia_form_editar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/text_familia_form_editar"
                android:contentDescription="@string/imput_text_familia_form_editar"
                android:ems="10"
                android:inputType="textCapSentences" />

            <TextView
                android:id="@+id/text_utilizacao_form_editar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/imput_text_familia_form_editar"
                android:contentDescription="@string/text_utilizacao_form_editar"
                android:text="@string/text_utilizacao_form_editar"
                android:textColor="@color/cinza" />

            <EditText
                android:id="@+id/imput_text_utilizacao_form_editar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/text_utilizacao_form_editar"
                android:contentDescription="@string/imput_text_utilizacao_form_editar"
                android:ems="10"
                android:inputType="textCapSentences" />

            <TextView
                android:id="@+id/text_local_coleta_form_editar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/imput_text_utilizacao_form_editar"
                android:contentDescription="@string/text_local_coleta_form_editar"
                android:text="@string/text_local_coleta_form_editar"
                android:textColor="@color/cinza" />

            <EditText
                android:id="@+id/imput_text_local_coleta_form_editar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/text_local_coleta_form_editar"
                android:contentDescription="@string/imput_text_local_coleta_form_editar"
                android:ems="10"
                android:inputType="textCapSentences" />

            <TextView
                android:id="@+id/text_coletor_form_editar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/imput_text_local_coleta_form_editar"
                android:contentDescription="@string/text_coletor_form_editar"
                android:text="@string/text_coletor_form_editar"
                android:textColor="@color/cinza" />

            <EditText
                android:id="@+id/imput_text_coletor_form_editar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/text_coletor_form_editar"
                android:contentDescription="@string/imput_text_coletor_form_editar"
                android:ems="10"
                android:inputType="textCapSentences" />

            <TextView
                android:id="@+id/text_data_coleta_form_editar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/imput_text_coletor_form_editar"
                android:contentDescription="@string/text_data_coleta_form_editar"
                android:text="@string/text_data_coleta_form_editar"
                android:textColor="@color/cinza" />

            <EditText
                android:id="@+id/imput_text_data_coleta_form_editar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/text_data_coleta_form_editar"
                android:contentDescription="@string/imput_text_data_coleta_form_editar"
                android:ems="10"
                android:inputType="date" />

            <TextView
                android:id="@+id/text_determinador_form_editar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/imput_text_data_coleta_form_editar"
                android:contentDescription="@string/text_determinador_form_editar"
                android:text="@string/text_determinador_form_editar"
                android:textColor="@color/cinza" />

            <EditText
                android:id="@+id/imput_text_determinador_form_editar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/text_determinador_form_editar"
                android:contentDescription="@string/imput_text_determinador_form_editar"
                android:ems="10"
                android:inputType="textCapSentences" />

            <TextView
                android:id="@+id/text_formacao_vegetal_form_editar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/imput_text_determinador_form_editar"
                android:contentDescription="@string/text_formacao_vegetal_form_editar"
                android:text="@string/text_formacao_vegetal_form_editar"
                android:textColor="@color/cinza" />

            <EditText
                android:id="@+id/imput_text_formacao_vegetal_form_editar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/text_formacao_vegetal_form_editar"
                android:contentDescription="@string/imput_text_formacao_vegetal_form_editar"
                android:ems="10"
                android:inputType="textCapSentences" />

            <TextView
                android:id="@+id/text_observacao_form_editar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/imput_text_formacao_vegetal_form_editar"
                android:contentDescription="@string/text_observacao_form_editar"
                android:text="@string/text_observacao_form_editar"
                android:textColor="@color/cinza" />

            <EditText
                android:id="@+id/imput_text_observacao_form_editar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/text_observacao_form_editar"
                android:contentDescription="@string/imput_text_observacao_form_editar"
                android:ems="10"
                android:inputType="textCapSentences" />

            <ImageButton
                android:id="@+id/ic_action_foto_form_editar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/text_nome_cientifico_form_editar"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/text_nome_form_editar"
                android:contentDescription="@string/ic_action_foto_form_editar"
                android:src="@drawable/ic_action_foto_cinza" />
        </RelativeLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@color/branco"
        tools:ignore="UselessParent" >

        <ImageButton
            android:id="@+id/ic_action_excluir_form_editar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@color/branco"
            android:contentDescription="@string/ic_action_excluir_form_editar"
            android:src="@drawable/ic_action_excluir_cinza" />

        <ImageButton
            android:id="@+id/ic_action_cancelar_form_editar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/ic_action_excluir_form_editar"
            android:layout_marginRight="48dp"
            android:layout_toLeftOf="@+id/ic_action_excluir_form_editar"
            android:background="@color/branco"
            android:contentDescription="@string/ic_action_cancelar_form_editar"
            android:src="@drawable/ic_action_cancelar" />

        <ImageButton
            android:id="@+id/ic_action_salvar_form_editar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/ic_action_excluir_form_editar"
            android:layout_marginLeft="42dp"
            android:layout_toRightOf="@+id/ic_action_excluir_form_editar"
            android:background="@color/branco"
            android:contentDescription="@string/ic_action_salvar_form_editar"
            android:src="@drawable/ic_action_salvar_cinza" />
    </RelativeLayout>

</RelativeLayout>