<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="end"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.taprecisando.ePlantsView.Sobre" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="wrap_content"
            android:layout_height="805dp" >

            <TextView
                android:id="@+id/text_cabecalho_form_sobre"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:background="@color/verde"
                android:contentDescription="@string/text_cabecalho_form_sobre"
                android:gravity="center"
                android:text="@string/text_cabecalho_form_sobre"
                android:textColor="@color/branco"
                android:textSize="@dimen/text_cabecalho" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/ic_splash_form_splash"
                android:src="@drawable/ic_icon" />

            <TextView
                android:id="@+id/text_nome_form_sobre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/imageView1"
                android:layout_marginTop="19dp"
                android:contentDescription="@string/text_nome_form_sobre"
                android:text="@string/text_nome_form_sobre" />

            <TextView
                android:id="@+id/text_versao_form_sobre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/text_nome_form_sobre"
                android:contentDescription="@string/text_versao_form_sobre"
                android:text="@string/text_versao_form_sobre" />

            <TextView
                android:id="@+id/text_data_form_sobre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/text_versao_form_sobre"
                android:contentDescription="@string/text_data_form_sobre"
                android:text="@string/text_data_form_sobre" />

            <TextView
                android:id="@+id/text_dev_form_sobre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/text_data_form_sobre"
                android:layout_marginTop="14dp"
                android:contentDescription="@string/text_dev_form_sobre"
                android:text="@string/text_dev_form_sobre"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/text_nome_dev_form_sobre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/text_dev_form_sobre"
                android:contentDescription="@string/text_nome_dev_form_sobre"
                android:text="@string/text_nome_dev_form_sobre" />

            <TextView
                android:id="@+id/text_email_dev_form_sobre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/text_nome_dev_form_sobre"
                android:contentDescription="@string/text_email_dev_form_sobre"
                android:text="@string/text_email_dev_form_sobre"
                android:textColor="@color/link_web" />

            <TextView
                android:id="@+id/text_sobre_form_sobre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/text_email_dev_form_sobre"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/text_sobre_form_sobre"
                android:text="@string/text_sobre_form_sobre"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/text01_form_sobre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/text_sobre_form_sobre"
                android:contentDescription="@string/text01_form_sobre"
                android:text="@string/text01_form_sobre" />

            <TextView
                android:id="@+id/text02_form_sobre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/text01_form_sobre"
                android:contentDescription="@string/text02_form_sobre"
                android:text="@string/text02_form_sobre" />

            <TextView
                android:id="@+id/text_agradece_form_sobre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/text02_form_sobre"
                android:contentDescription="@string/text_agradece_form_sobre"
                android:text="@string/text_agradece_form_sobre"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/text_agradece01_form_sobre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/text_agradece_form_sobre"
                android:contentDescription="@string/text_agradece01_form_sobre"
                android:text="@string/text_agradece01_form_sobre" />

            <TextView
                android:id="@+id/text_agradece02_form_sobre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/text_agradece01_form_sobre"
                android:contentDescription="@string/text_agradece02_form_sobre"
                android:text="@string/text_agradece02_form_sobre" />

            <TextView
                android:id="@+id/text_sugestao_form_sobre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/text_agradece02_form_sobre"
                android:contentDescription="@string/text_sugestao_form_sobre"
                android:text="@string/text_sugestao_form_sobre"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/text_sugestao01_form_sobre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_sugestao_form_sobre"
                android:contentDescription="@string/text_sugestao01_form_sobre"
                android:text="@string/text_sugestao01_form_sobre" />

            <TextView
                android:id="@+id/text_email01_dev_form_sobre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/text_sugestao01_form_sobre"
                android:contentDescription="@string/text_email_dev_form_sobre"
                android:text="@string/text_email_dev_form_sobre"
                android:textColor="@color/link_web" />

        </RelativeLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@color/branco"
        tools:ignore="UselessParent" >

        <Button
            android:id="@+id/ic_action_botaoOK_form_sobre"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:text="OK"
            tools:ignore="HardcodedText" />
    </RelativeLayout>

</RelativeLayout>